--- a/doc/manual/en/installation.tex
+++ b/doc/manual/en/installation.tex
@@ -208,8 +208,21 @@ can contain arbitrary text, e.g. contact/owner/emergency information.
 
 \subsection*{On a Windows PC}
 
-Download the program file \verb|XCSoar.exe| (target ``PC'') to your
-hard disk.
+Three Windows versions are available:
+\begin{itemize}
+\item \textbf{64-bit with OpenGL} (target ``WIN64OPENGL''): run the 
+  installer file, which will install XCSoar. A \verb|.zip| file
+  is available as an alternative, for manual install.
+  This version supports high-DPI displays and GPU acceleration, and 
+  is essentially identical to the 
+  Unix and Android versions in features and visuals. It is still
+  somewhat experimental (introduced with build 7.44).
+\item \textbf{64-bit legacy} (target ``WIN64''): download \verb|XCSoar.exe|
+  and place it on your hard disk; no installer is required. This version
+  also works on very old computers without any GPU acceleration.
+\item \textbf{32-bit legacy} (target ``PC''): download \verb|XCSoar.exe|
+  and place it on your hard disk; no installer is required.
+\end{itemize}
 
 \subsection*{On Unix/Linux}
 
