Manual + NEWS.txt: Update with user repository Include the user repository configuration in the user manual, and mention in NEWS.txt.

--- a/NEWS.txt
+++ b/NEWS.txt
@@ -40,6 +40,7 @@ Version 7.44 - not yet released
   - checklists: add Markdown support (bold, links, checkboxes)
   - fix home waypoint lost on restart due to async terrain loading #2169
   - fix profile migration ordering of old waypoint/airspace keys
+  - add ability to configure user-defined repositories
 * ui
   - enable goto and waypoint details for location map items (clicking on empty map locations)
   - streamlined, and optimized icons
