--- a/doc/manual/xcsoar-headers.sty
+++ b/doc/manual/xcsoar-headers.sty
@@ -1,6 +1,9 @@
 \usepackage{calc}
 \usepackage{fancyhdr}
 
+\setlength{\headheight}{15.0pt}
+\addtolength{\topmargin}{-3.0pt}
+
 \newcommand{\xcsoarheader}[1]{
   \pagestyle{fancy}
 
