--- a/doc/manual/en/ch11_configuration.tex
+++ b/doc/manual/en/ch11_configuration.tex
@@ -303,8 +303,14 @@ changed terrain settings are directly visible at the small preview below.
   Slopes faced to the wind (or sun) get displayed brighter and the averted slopes get darker.
 \item[Terrain contrast*]  Defines the amount of Phong shading in the terrain rendering. 
   Use large values to emphasise terrain slope, smaller values if flying in steep mountains.
-\item[Terrain brightness*]  Defines the brightness (whiteness) of the terrain rendering. 
+\item[Terrain brightness*]  Defines the brightness (whiteness) of the terrain rendering.
   This controls the average illumination of the terrain.
+\item[Contours*]  Draws contour lines on the terrain.  The selected mode
+  sets the base line density, which is also scaled automatically with the
+  zoom level to avoid over-cluttering at small scales.
+  Four different modes are provided for different landscape types. {\bf Mountains}
+  is for areas with steep slopes, with a 256\,m base line spaceing. The other modes
+  provide a progressively increasing contour line spacing.
 \end{description}
 
 
